--- a/rotas/contatos.html
+++ b/rotas/contatos.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index</title>
+    <title>Contatos</title>
   </head>
-
   <body>
-    <a href="/contatos.html">Ir para contatos</a>
-    <h1>Página Home</h1>
+    <a href="/index.html">Ir para home</a>
+    <h1>Página de contatos</h1>
   </body>
 </html>
